--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -9,10 +9,16 @@
   - [目次](#目次)
   - [モデリングの方法](#モデリングの方法)
   - [ポリゴンモデリング](#ポリゴンモデリング)
-  - [ワイングラスを作ってみよう](#ワイングラスを作ってみよう)
-  - [台を作ってみよう](#台を作ってみよう)
-  - [ワイングラス・台に材質を設定しよう](#ワイングラス台に材質を設定しよう)
-  - [ライトをあててみよう](#ライトをあててみよう)
+  - [やってみようPart1(ワイングラス)](#やってみようpart1ワイングラス)
+    - [下準備](#下準備)
+    - [ワイングラスを作ろう(外側)](#ワイングラスを作ろう外側)
+    - [ワイングラスを作ろう(内側)](#ワイングラスを作ろう内側)
+    - [滑らかにしよう](#滑らかにしよう)
+    - [台を作ってみよう](#台を作ってみよう)
+    - [ワイングラス・台に材質を設定しよう](#ワイングラス台に材質を設定しよう)
+    - [ライトをあててみよう](#ライトをあててみよう)
+    - [参考](#参考)
+  - [やってみようPart2](#やってみようpart2)
   - [好きな形を作るには？](#好きな形を作るには)
   - [簡単に人もどきを作りながら慣れてみよう](#簡単に人もどきを作りながら慣れてみよう)
   - [(おまけ)グラスにワインを注ごう](#おまけグラスにワインを注ごう)
@@ -44,16 +50,25 @@
 - ModifierのSubDivision Surfaceで、非破壊的に滑らかにできる
 - 滑らかに見せるのは、ObjectモードでShade Smooth
 
+---
+---
 
-## ワイングラスを作ってみよう
-線を描いてScrewで作る方法を見せてから
+## やってみようPart1(ワイングラス)
+### 下準備
 
+- Blenderを起動して、立方体を削除(X)
 - Edit - preferences - Add ons
 - imagesを検索
 - Import-Exmport Import images as Planesにチェック
-- Import - Images as Planesでワイングラスの写真を選択
+
+![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
+
+- 上の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
+- Import - Images as Planesで写真を選択
 - マテリアルプレビューモードに
 - S 10で10倍に, G-Xで少し後ろに、G-Zで少し上にあげてZ=0のところにグラスの下をあわせる
+
+### ワイングラスを作ろう(外側)
 
 - Shift+AでCircle
 - 円を選択して、TABキーでEditモードに
@@ -65,7 +80,19 @@
 - Sでサイズをあわせる
 - これを繰り返して、グラスの外側をつくる
 
-## 台を作ってみよう
+### ワイングラスを作ろう(内側)
+- Iで内側に狭めよう
+- Eで下に押し出して(Z軸方向)
+- Sでグラスの内側にあうようにスケール
+- これを繰り返して、グラスの内側をつくる
+
+### 滑らかにしよう
+- TABキーでObjectモードに
+- 右クリックでShade Smooth
+- もう少し滑らかにしたいので、モディファイアからSubdivisionSurface
+- 画像は表示を消しておこう
+- 
+### 台を作ってみよう
 - Shift+AでPlane
 - S 10 で10倍に
 - Tabで編集モードに入り、2で辺編集モード
@@ -73,15 +100,38 @@
 - 交差する辺を選んでCtrl-Bでベベル スクロールでカーブに
 - Tabでオブジェクトモードに戻り、右クリック Shade smoothで滑らかに
 
-## ワイングラス・台に材質を設定しよう
-https://kemarii.com/blog/cg/blender-glass-material/
+### ワイングラス・台に材質を設定しよう
+[参考ページ](https://kemarii.com/blog/cg/blender-glass-material/)
 
+プリンシブルBSDF
+| 項目                         | 値               |
+| ---------------------------- | ---------------- |
+| Roughness（粗さ）            | 0                |
+| Transmission（伝播）         | 1.0              |
+| IOR                          | 1.57             |
+| Alpha（アルファ）            | 0.6              |
+| Blend Mode（ブレンドモード） | アルファハッシュ |
 
-## ライトをあててみよう
+レンダープロパティのScreenSpaceReflectionsにチェックを入れる
 
+---
 
+### ライトをあててみよう
+- Shift+AでLight追加
+
+### 参考
+今回は紹介にとどめるけど、こんな作り方もあるよ。
+
+---
+---
+
+## やってみようPart2
 時間がある人は最後にワインを注いでみよう
 
+
+
+---
+---
 ## 好きな形を作るには？
 - まずは、いろんな人のモデリングを真似しよう
 - 一つの形を作るにもいろいろな作り方あるよ
