--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -16,9 +16,11 @@
     - [滑らかにしよう](#滑らかにしよう)
     - [台を作ってみよう](#台を作ってみよう)
     - [ワイングラス・台に材質を設定しよう](#ワイングラス台に材質を設定しよう)
-    - [ライトをあててみよう](#ライトをあててみよう)
-    - [参考](#参考)
+    - [HDRIを設定](#hdriを設定)
+    - [レンダリングしてみよう](#レンダリングしてみよう)
+    - [参考:色んな方法があるモデリング](#参考色んな方法があるモデリング)
   - [やってみようPart2](#やってみようpart2)
+  - [やってみようPart3](#やってみようpart3)
   - [好きな形を作るには？](#好きな形を作るには)
   - [簡単に人もどきを作りながら慣れてみよう](#簡単に人もどきを作りながら慣れてみよう)
   - [(おまけ)グラスにワインを注ごう](#おまけグラスにワインを注ごう)
@@ -64,6 +66,7 @@
 ![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
 
 - 上の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
+- File-SaveでYYYYMMDDt_mr5_03_01.blend(保存は随時)
 - Import - Images as Planesで写真を選択
 - マテリアルプレビューモードに
 - S 10で10倍に, G-Xで少し後ろに、G-Zで少し上にあげてZ=0のところにグラスの下をあわせる
@@ -104,7 +107,8 @@
 ### ワイングラス・台に材質を設定しよう
 [参考ページ](https://kemarii.com/blog/cg/blender-glass-material/)
 
-プリンシブルBSDF
+- MaterialPropertiesPropertiesからNew
+- プリンシブルBSDFの設定を以下のように
 
 | 項目                         | 値               |
 | ---------------------------- | ---------------- |
@@ -116,19 +120,72 @@
 
 レンダープロパティのScreenSpaceReflectionsにチェックを入れる
 
+- 台は適当に色をつけてみよう
+
+### HDRIを設定
+- ガラスはまわりの環境光によってガラスに見えるので、HDRI(High Dynamic Range Image)を環境光として設定しよう。
+
+- [Poly Haven](https://polyhaven.com/){:target="_blank"}から適当にダウンロードして、Blenderの中に「HDRI」フォルダを作成してそこに保存しておこう。
+- World PropertiesのColorの左からEnvironmentTextureを選んで、写真を開こう。
+
+### レンダリングしてみよう
+- 前回の復習
+- 視点を決めて、View - Align View - Align Active Camera to View
+- Render Image
+- Save
+
 ---
 
-### ライトをあててみよう
-- Shift+AでLight追加
-
-### 参考
+### 参考:色んな方法があるモデリング
 今回は紹介にとどめるけど、こんな作り方もあるよ。
+- Curveで軸を中心とした線を描く
+- screwモディファイアで360度ぐるっと回す。
+
 
 ---
 ---
-
 ## やってみようPart2
+- 立方体から人型を作ってみよう
+- ループカット(Ctrl+R)を使うと、分割できるよ
+- 押し出し(E)を使うと、自由に伸ばせる
+- 必要に応じてインセット(I)
+- 曲面にするにはSubdivisionSurfaceもディアファイアでできる。
+
+---
+---
+
+## やってみようPart3
 時間がある人は最後にワインを注いでみよう
+- ワインの注ぎ口となる球を追加(Wine)
+- 計算する範囲のCubeを(WineDomain)
+- ワイングラスにFluid追加
+  
+| 項目      | 値       |
+| --------- | -------- |
+| Type      | Effector |
+| Is Planer | チェック |
+
+- WineにFluid追加
+
+| 項目           | 値     |
+| -------------- | ------ |
+| Type           | Flow   |
+| Flowtype       | Liquid |
+| FLow Behaviour | Inflow |
+
+- WineDomainにFluid追加
+
+| 項目                 | 値       |
+| -------------------- | -------- |
+| Type                 | Domain   |
+| DomainType           | Liquid   |
+| Mesh                 | チェック |
+| Cache - Type         | All      |
+| Cache - Is Resumable | チェック |
+
+Materialの色を適当につけてみよう
+
+
 
 
 
