--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -9,6 +9,9 @@
   - [目次](#目次)
   - [モデリングの方法](#モデリングの方法)
   - [ポリゴンモデリング](#ポリゴンモデリング)
+    - [ポリゴンモデリングとは](#ポリゴンモデリングとは)
+    - [主に利用するショートカット](#主に利用するショートカット)
+    - [その他](#その他)
   - [やってみようPart1(ワイングラス)](#やってみようpart1ワイングラス)
     - [下準備](#下準備)
     - [ワイングラスを作ろう(外側)](#ワイングラスを作ろう外側)
@@ -22,25 +25,28 @@
   - [やってみようPart2](#やってみようpart2)
   - [やってみようPart3](#やってみようpart3)
   - [好きな形を作るには？](#好きな形を作るには)
-  - [簡単に人もどきを作りながら慣れてみよう](#簡単に人もどきを作りながら慣れてみよう)
-  - [(おまけ)グラスにワインを注ごう](#おまけグラスにワインを注ごう)
-  - [Low Poly Character](#low-poly-character)
   - [気をつけること](#気をつけること)
-  - [Monster Mash](#monster-mash)
+  - [参考](#参考)
+    - [Monster Mash(こんなモデリング方法も)](#monster-mashこんなモデリング方法も)
+  - [Low Poly Character(英語の動画は字幕使ってみてみよう)](#low-poly-character英語の動画は字幕使ってみてみよう)
+  - [お疲れ様〜](#お疲れ様)
 
 ---
 
 
 ## モデリングの方法
-- 大きく分けるとEdit ModeとSculpt Modeがある。
+- 大きく分けるとEdit Mode(ポリゴンモデリング)とSculpt Mode(スカルプティング)がある。
 - Edit Modeは3つ以上の点で作られる面を組み合わせて形状を作る
 - Sculptは粘土細工・彫刻のように、盛り上げたり削ったりして形状を作る
-- この演習ではSculptは扱わない
+- この演習ではスカルプティングは扱わない
+- モデリングをしっかりやりたい人は、いろいろなチュートリアルを真似することをお勧めする
 
 ## ポリゴンモデリング
+### ポリゴンモデリングとは
 - ポリゴン(多角形)の集まりをメッシュと呼ぶ
 - 多角形は頂点・辺・面から成り立っている
 
+### 主に利用するショートカット
 - 頂点・辺・面(1,2,3でモード切り替え)の移動・回転・スケールはG,R,S
 - E(Exlude)で押し出し
 - I(Inset)で面の差し込み
@@ -48,6 +54,7 @@
 - Ctrl-Bでベベル
 - Option-右クリックでループ選択
 
+### その他
 - 右クリックでsubdivideでポリゴンを細分化できる
 - ModifierのSubDivision Surfaceで、非破壊的に滑らかにできる
 - 滑らかに見せるのは、ObjectモードでShade Smooth
@@ -66,7 +73,7 @@
 ![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
 
 - 上の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
-- File-SaveでYYYYMMDDt_mr5_03_01.blend(保存は随時)
+- File-SaveでYYYYMMDDt_mr5_03_01.blend(保存は随時行おう)
 - Import - Images as Planesで写真を選択
 - マテリアルプレビューモードに
 - S 10で10倍に, G-Xで少し後ろに、G-Zで少し上にあげてZ=0のところにグラスの下をあわせる
@@ -105,7 +112,7 @@
 - Tabでオブジェクトモードに戻り、右クリック Shade smoothで滑らかに
 
 ### ワイングラス・台に材質を設定しよう
-[参考ページ](https://kemarii.com/blog/cg/blender-glass-material/)
+[参考ページ](https://kemarii.com/blog/cg/blender-glass-material/){:target="_blank"}
 
 - MaterialPropertiesPropertiesからNew
 - プリンシブルBSDFの設定を以下のように
@@ -123,14 +130,16 @@
 - 台は適当に色をつけてみよう
 
 ### HDRIを設定
+- レンダープレビューモードに変更
+- 環境光は確認用に設定されているが、レンダリングには反映されない。
 - ガラスはまわりの環境光によってガラスに見えるので、HDRI(High Dynamic Range Image)を環境光として設定しよう。
-
 - [Poly Haven](https://polyhaven.com/){:target="_blank"}から適当にダウンロードして、Blenderの中に「HDRI」フォルダを作成してそこに保存しておこう。
 - World PropertiesのColorの左からEnvironmentTextureを選んで、写真を開こう。
 
 ### レンダリングしてみよう
 - 前回の復習
 - 視点を決めて、View - Align View - Align Active Camera to View
+- 位置を微調整したい場合には、Nでサイドバーが表示されている状態にして、ViewのCamera to Viewにチェックを入れて、それから調整しよう。
 - Render Image
 - Save
 
@@ -149,13 +158,18 @@
 - ループカット(Ctrl+R)を使うと、分割できるよ
 - 押し出し(E)を使うと、自由に伸ばせる
 - 必要に応じてインセット(I)
-- 曲面にするにはSubdivisionSurfaceもディアファイアでできる。
+- 曲面にするにはSubdivisionSurfaceモディアファイアでできる。(逆にいうとこれを想定して作る必要あり)
 
 ---
 ---
 
 ## やってみようPart3
 時間がある人は最後にワインを注いでみよう
+1. 流入口
+2. 影響あたえるもの
+3. 液体自身を扱うもの
+の3つが、液体シミュレーションには必要だよ。
+
 - ワインの注ぎ口となる球を追加(Wine)
 - 計算する範囲のCubeを(WineDomain)
 - ワイングラスにFluid追加
@@ -183,11 +197,9 @@
 | Cache - Type         | All      |
 | Cache - Is Resumable | チェック |
 
-Materialの色を適当につけてみよう
-
-
-
-
+- BakeAllでシミュレーションしてみる
+- だめならFreeAll->調整->BakeAll
+- Materialの色(ワインの色)を適当につけてみよう
 
 ---
 ---
@@ -197,28 +209,24 @@ Materialの色を適当につけてみよう
 - 曲面を作る時には滑らかにする方法がshade smooth, subdivision surface, と方法があることをしっておこう
 - ポリゴン数はなるべく少ない状態で大まかな形からディテイルに作業した方が効率よいよ
 
-## 簡単に人もどきを作りながら慣れてみよう
-立方体から人型を作ってみよう
+## 気をつけること
+- ポリゴン数を増やしすぎない
+- ポリゴン数を減らすリトポロジーという技術もある
 
+---
+---
+## 参考
+### Monster Mash(こんなモデリング方法も)
+https://paiza.hatenablog.com/entry/2021/04/07/150000
 
-
-## (おまけ)グラスにワインを注ごう
-液体の表現には
-1. 流体が出るところ
-2. 流体を妨げるもの
-3. 計算する範囲
-の3つが必要だよ
-
-
-
-
-## Low Poly Character
+## Low Poly Character(英語の動画は字幕使ってみてみよう)
+https://www.youtube.com/watch?v=k5x1I6gwpiU
 https://www.youtube.com/watch?v=Ljl_QFs9xhE
 https://www.youtube.com/watch?v=Z3vdQj06DGo
 
-## 気をつけること
-- ポリゴン数を増やしすぎない
-- 減らすリポトロジーという技術もある
+---
+---
+## お疲れ様〜
+- 今日学んだことを使っていろいろ作ってみよう
+- 目に入るもの、どうやってモデリングしたらいいか考えてみよう。
 
-## Monster Mash
-https://paiza.hatenablog.com/entry/2021/04/07/150000
