--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -19,7 +19,7 @@
     - [滑らかにしよう](#滑らかにしよう)
     - [台を作ってみよう](#台を作ってみよう)
     - [ワイングラス・台に材質を設定しよう](#ワイングラス台に材質を設定しよう)
-    - [HDRIを設定](#hdriを設定)
+    - [HDRI(環境光)を設定](#hdri環境光を設定)
     - [レンダリングしてみよう](#レンダリングしてみよう)
     - [参考:色んな方法があるモデリング](#参考色んな方法があるモデリング)
   - [やってみようPart2](#やってみようpart2)
@@ -129,7 +129,7 @@
 
 - 台は適当に色をつけてみよう
 
-### HDRIを設定
+### HDRI(環境光)を設定
 - レンダープレビューモードに変更
 - 環境光は確認用に設定されているが、レンダリングには反映されない。
 - ガラスはまわりの環境光によってガラスに見えるので、HDRI(High Dynamic Range Image)を環境光として設定しよう。
@@ -154,6 +154,8 @@
 ---
 ---
 ## やってみようPart2
+- File-New-General
+- File-SaveでYYYYMMDDt_mr5_03_02.blend(保存は随時行おう)
 - 立方体から人型を作ってみよう
 - ループカット(Ctrl+R)を使うと、分割できるよ
 - 押し出し(E)を使うと、自由に伸ばせる
