--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -70,9 +70,9 @@
 - imagesを検索
 - Import-Exmport Import images as Planesにチェック
 
-![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
+[ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
 
-- 上の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
+- 上のリンク先の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
 - File-SaveでYYYYMMDDt_mr5_03_01.blend(保存は随時行おう)
 - Import - Images as Planesで写真を選択
 - マテリアルプレビューモードに
