--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -71,7 +71,7 @@
 - Import-Exmport Import images as Planesにチェック
 
 ![ワイングラス](https://jp.images-monotaro.com/Monotaro3/pi/full/mono00594764-141008-02.jpg)
-![ワイングラス zip形式](img/wineglass.jpg.zip)
+[ワイングラス zip形式](img/wineglass.jpg.zip)
 
 - 上のリンク先の写真をBlenderフォルダにwineglass.jpgとして保存しておこう
 - (注意)chromeだと勝手にwebp形式になって保存される(汗 2022/3/8)...zipファイルを保存して解凍してください...
