--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -117,7 +117,7 @@
 ### ワイングラス・台に材質を設定しよう
 [参考ページ](https://kemarii.com/blog/cg/blender-glass-material/){:target="_blank"}
 
-- MaterialPropertiesPropertiesからNew
+- MaterialPropertiesからNew
 - プリンシブルBSDFの設定を以下のように
 
 | 項目                         | 値               |
@@ -160,6 +160,7 @@
 - File-New-General
 - File-SaveでYYYYMMDDt_mr5_03_02.blend(保存は随時行おう)
 - 立方体から人型を作ってみよう
+- 左右対称なので、Mirrorモディファイア使うよ。
 - ループカット(Ctrl+R)を使うと、分割できるよ
 - 押し出し(E)を使うと、自由に伸ばせる
 - 必要に応じてインセット(I)
