--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -23,6 +23,7 @@
     - [レンダリングしてみよう](#レンダリングしてみよう)
     - [参考:色んな方法があるモデリング](#参考色んな方法があるモデリング)
   - [やってみようPart2](#やってみようpart2)
+    - [立方体から人型を作ってみよう](#立方体から人型を作ってみよう)
   - [やってみようPart3](#やってみようpart3)
   - [好きな形を作るには？](#好きな形を作るには)
   - [気をつけること](#気をつけること)
@@ -63,6 +64,9 @@
 ---
 
 ## やってみようPart1(ワイングラス)
+
+[![](https://img.youtube.com/vi/X7LSNEMs7Bs/0.jpg)](https://www.youtube.com/watch?v=X7LSNEMs7Bs){:target="_blank"}
+
 ### 下準備
 
 - Blenderを起動して、立方体を削除(X)
@@ -153,13 +157,20 @@
 - Curveで軸を中心とした線を描く
 - screwモディファイアで360度ぐるっと回す。
 
+[![](https://img.youtube.com/vi/SiUmPGgHhp8/0.jpg)](https://www.youtube.com/watch?v=SiUmPGgHhp8){:target="_blank"}
 
 ---
 ---
 ## やってみようPart2
 - File-New-General
 - File-SaveでYYYYMMDDt_mr5_03_02.blend(保存は随時行おう)
-- 立方体から人型を作ってみよう
+
+### 立方体から人型を作ってみよう
+
+![簡単な人形](img/mr5-03-01.png)
+
+[![](https://img.youtube.com/vi/aDxVx_T1UYA/0.jpg)](https://www.youtube.com/watch?v=aDxVx_T1UYA){:target="_blank"}
+
 - 左右対称なので、Mirrorモディファイア使うよ。
 - ループカット(Ctrl+R)を使うと、分割できるよ
 - 押し出し(E)を使うと、自由に伸ばせる
@@ -171,9 +182,14 @@
 
 ## やってみようPart3
 時間がある人は最後にワインを注いでみよう
+
+[![](https://img.youtube.com/vi/SDfD5dxjedI/0.jpg)](https://www.youtube.com/watch?v=SDfD5dxjedI){:target="_blank"}
+
 1. 流入口
 2. 影響あたえるもの
 3. 液体自身を扱うもの
+
+
 の3つが、液体シミュレーションには必要だよ。
 
 - ワインの注ぎ口となる球を追加(Wine)
@@ -234,5 +250,6 @@ https://www.youtube.com/watch?v=Z3vdQj06DGo
 ---
 ## お疲れ様〜
 - 今日学んだことを使っていろいろ作ってみよう
+- モデリングをしっかりやりたい人は、いろいろなチュートリアルを真似することがお勧め
 - 目に入るもの、どうやってモデリングしたらいいか考えてみよう。
 
