--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -29,7 +29,7 @@
   - [気をつけること](#気をつけること)
   - [参考](#参考)
     - [Monster Mash(こんなモデリング方法も)](#monster-mashこんなモデリング方法も)
-  - [Low Poly Character(英語の動画は字幕使ってみてみよう)](#low-poly-character英語の動画は字幕使ってみてみよう)
+    - [Low Poly Character(英語の動画は字幕使ってみてみよう)](#low-poly-character英語の動画は字幕使ってみてみよう)
   - [お疲れ様〜](#お疲れ様)
 
 ---
@@ -241,7 +241,7 @@
 ### Monster Mash(こんなモデリング方法も)
 https://paiza.hatenablog.com/entry/2021/04/07/150000
 
-## Low Poly Character(英語の動画は字幕使ってみてみよう)
+### Low Poly Character(英語の動画は字幕使ってみてみよう)
 https://www.youtube.com/watch?v=k5x1I6gwpiU
 https://www.youtube.com/watch?v=Ljl_QFs9xhE
 https://www.youtube.com/watch?v=Z3vdQj06DGo
