--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -239,12 +239,12 @@
 ---
 ## 参考
 ### Monster Mash(こんなモデリング方法も)
-https://paiza.hatenablog.com/entry/2021/04/07/150000
+- [Monster Mash](https://paiza.hatenablog.com/entry/2021/04/07/150000){:target="_blank"}
 
 ### Low Poly Character(英語の動画は字幕使ってみてみよう)
-https://www.youtube.com/watch?v=k5x1I6gwpiU
-https://www.youtube.com/watch?v=Ljl_QFs9xhE
-https://www.youtube.com/watch?v=Z3vdQj06DGo
+- [ローポリキャラクター tutorial1](https://www.youtube.com/watch?v=k5x1I6gwpiU){:target="_blank"}
+- [ローポリキャラクター tutorial2](https://www.youtube.com/watch?v=Ljl_QFs9xhE){:target="_blank"}
+- [ローポリキャラクター tutorial3](https://www.youtube.com/watch?v=Z3vdQj06DGo){:target="_blank"}
 
 ---
 ---
