--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -8,9 +8,20 @@
 - [メディア表現V 4. モディファイア](#メディア表現v-4-モディファイア)
   - [目次](#目次)
   - [モディファイアとは？](#モディファイアとは)
-  - [Scaleが1でないベベルの例](#scaleが1でないベベルの例)
-  - [階段 + particlesystem + colllision](#階段--particlesystem--colllision)
-  - [skin](#skin)
+    - [Scaleが1でないベベルの例](#scaleが1でないベベルの例)
+  - [階段(Solidify, Array Modifier)+おまけ(Particle system, Collision)](#階段solidify-array-modifierおまけparticle-system-collision)
+    - [Solidify Modifierとは?](#solidify-modifierとは)
+    - [Array Modifierとは?](#array-modifierとは)
+    - [簡単に階段を作ろう](#簡単に階段を作ろう)
+    - [スーパーボール落とそう](#スーパーボール落とそう)
+    - [跳ね返らそう](#跳ね返らそう)
+    - [レンダリング](#レンダリング)
+  - [skinモディファイア](#skinモディファイア)
+    - [参考にしたYouTube](#参考にしたyoutube)
+    - [skinモディファイアとは？](#skinモディファイアとは)
+    - [skinモディファイアを使ったモデリング](#skinモディファイアを使ったモデリング)
+    - [Armatureを作成してみよう](#armatureを作成してみよう)
+  - [今日もお疲れ様でした。](#今日もお疲れ様でした)
 
 ---
 
@@ -21,12 +32,76 @@
 - 今日はGenerate/Physicsを中心にみていこう
 - Scaleが1ではない状態のものは、うまくかからないことがあるので、コマンド-AでScaleとしてからにしよう
 
-## Scaleが1でないベベルの例
+### Scaleが1でないベベルの例
 Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Command+AでScaleを適応してみましょう。
 
-## 階段 + particlesystem + colllision
+---
+---
+## 階段(Solidify, Array Modifier)+おまけ(Particle system, Collision)
+### Solidify Modifierとは?
+- 面に厚みをつけるもの
 
-## skin
-キャラクタ簡単につくれちゃいますね。Rigもいけちゃうぞー
+### Array Modifierとは?
+- オブジェクトを複数規則的に配置するもの
 
-https://www.youtube.com/watch?v=BXSD4LLtKfw
+### 簡単に階段を作ろう
+- ガイドを0.1にしておこう(10cm単位)
+- Shift+AでPlane追加して、奥行き20cmに
+- Shift+Dで複製して、回転して1段分作る
+- Solidify Modifierを使って厚みをつけておこう
+- Array Modifierを使って10段くらい複製しよう
+- 階段下と上に同じくPlaneを追加しよう
+
+### スーパーボール落とそう
+- Shift+AでUV Sphereを追加(Source)。階段の上に配置。
+- Particle System Modifierを追加
+- もう一つ、パーティクルの雛形となるUV Sphereを追加(Particle)
+- Sourceの設定で、Render TypeをObjectにしてParticleを指定
+- とりあえず再生してみる。
+- Particleに適宜色を追加
+
+### 跳ね返らそう
+- 階段・上下の床にCollisionを設定
+- Dampingを0.3くらいに
+- フレーム1に戻して再生してみよう。
+
+### レンダリング
+- 前々回を思い出してアニメーションをレンダリングしてみよう
+
+
+---
+---
+
+
+## skinモディファイア
+### 参考にしたYouTube
+[Make Characters Fast With The Skin Modifier || Blender 2.91](https://www.youtube.com/watch?v=BXSD4LLtKfw){:target="_blank"}
+
+### skinモディファイアとは？
+- 頂点と辺に厚みを持たせることができる。(面は無視される)
+- 厚みはCtrl+Aでコントロールできる
+- 頂点を押し出しなどで、棒人間を作成し、そこからキャラクターを作ることができる。
+- Create Armatureを使うことで、骨をいれることができる。
+- PoseモードでArmature(骨の集まり)を動かすことで、キャラクターにポーズをとらせることができる
+
+### skinモディファイアを使ったモデリング
+- Shift+AでPlaneを追加
+- Skinモディファイア追加。ShadeSmoothにチェック
+- SubdivisionSurfaceモディファイアを追加。レベルを2に
+- TABキーでEditモードに
+- 頂点モード(1)でM, Merge at Centerで一つの点にする
+- 腰の位置くらいまでGZで持ち上げる
+- Mirrorモディファイアで左右対称にする
+- Eをつかいながら足・胴・腕・首・顔などを作成していく。
+- 頂点を選択してCtrl+Aで厚みを設定していく
+
+### Armatureを作成してみよう
+- Mirrorがあると、あとでおかしくなるので、Apply
+- Create Armatureでボーンを作ってみよう
+- Poseモードでボーンを動かして、ポーズをとってみよう。
+
+---
+---
+## 今日もお疲れ様でした。
+- 今日学んだことを使って、いろいろ作成してみよう。
+- 
