--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -30,10 +30,10 @@
 - 非破壊的なので、有効にしなければ元に戻るよ
 - Modify/Generate/Deform/Physicsのカテゴリに分かれているよ
 - 今日はGenerate/Physicsを中心にみていこう
-- Scaleが1ではない状態のものは、うまくかからないことがあるので、コマンド-AでScaleとしてからにしよう
+- Location,Rotation,Scaleが1ではない状態のものは、うまくかからないことがあるので、Ctrl-Aで適応させると思い通りにいくよ
 
 ### Scaleが1でないベベルの例
-Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Command+AでScaleを適応してみましょう。
+Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Ctrl+AでScaleを適応してみましょう。
 
 ---
 ---
@@ -81,8 +81,8 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 - 頂点と辺に厚みを持たせることができる。(面は無視される)
 - 厚みはCtrl+Aでコントロールできる
 - 頂点を押し出しなどで、棒人間を作成し、そこからキャラクターを作ることができる。
-- Create Armatureを使うことで、骨をいれることができる。
-- PoseモードでArmature(骨の集まり)を動かすことで、キャラクターにポーズをとらせることができる
+- Create Armatureを使うことで、ボーン(骨)をいれることができる。
+- PoseモードでArmature(ボーンの集まり)を動かすことで、キャラクターにポーズをとらせることができる
 
 ### skinモディファイアを使ったモデリング
 - Shift+AでPlaneを追加
