--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -46,7 +46,7 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 
 ### 簡単に階段を作ろう
 - ガイドを0.1にしておこう(10cm単位)
-- Shift+AでPlane追加して、奥行き20cmに
+- Shift+AでPlane追加して、幅2m,奥行き20cmに
 - Shift+Dで複製して、回転して1段分作る
 - Solidify Modifierを使って厚みをつけておこう
 - Array Modifierを使って10段くらい複製しよう
