--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -35,6 +35,8 @@
 ### Scaleが1でないベベルの例
 Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Ctrl+AでScaleを適応してみましょう。
 
+[![](https://img.youtube.com/vi/n1v13PpZZXA/0.jpg)](https://www.youtube.com/watch?v=n1v13PpZZXA){:target="_blank"}
+
 ---
 ---
 ## 階段(Solidify, Array Modifier)+おまけ(Particle system, Collision)
@@ -44,10 +46,13 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 ### Array Modifierとは?
 - オブジェクトを複数規則的に配置するもの
 
+[![](https://img.youtube.com/vi/WDFyFWKuJ3E/0.jpg)](https://www.youtube.com/watch?v=WDFyFWKuJ3E){:target="_blank"}
+
 ### 簡単に階段を作ろう
 - ガイドを0.1にしておこう(10cm単位)
 - Shift+AでPlane追加して、幅2m,奥行き20cmに
 - Shift+Dで複製して、回転して1段分作る
+- 二つ選択してコマンド+Jで一つのオブジェクトに
 - Solidify Modifierを使って厚みをつけておこう
 - Array Modifierを使って10段くらい複製しよう
 - 階段下と上に同じくPlaneを追加しよう
@@ -83,6 +88,8 @@ Scaleが1以外の場合、モディファイアが当たってからScaleされ
 - 頂点を押し出しなどで、棒人間を作成し、そこからキャラクターを作ることができる。
 - Create Armatureを使うことで、ボーン(骨)をいれることができる。
 - PoseモードでArmature(ボーンの集まり)を動かすことで、キャラクターにポーズをとらせることができる
+
+[![](https://img.youtube.com/vi/C9jwrFNxBm0/0.jpg)](https://www.youtube.com/watch?v=C9jwrFNxBm0){:target="_blank"}
 
 ### skinモディファイアを使ったモデリング
 - Shift+AでPlaneを追加
