--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -7,9 +7,10 @@
 
 - [メディア表現V 5. マテリアルとテキスチャ](#メディア表現v-5-マテリアルとテキスチャ)
   - [目次](#目次)
-  - [マテリアル/テキスチャ](#マテリアルテキスチャ)
-  - [スザンヌ色々+左右違うマテリアル](#スザンヌ色々左右違うマテリアル)
-    - [Principled BSDF](#principled-bsdf)
+  - [マテリアル/テキスチャとは](#マテリアルテキスチャとは)
+  - [プリンシプルBSDF](#プリンシプルbsdf)
+    - [参考にしたページ](#参考にしたページ)
+    - [主な項目と設定例](#主な項目と設定例)
       - [ゴム](#ゴム)
       - [光沢のあるプラスチック](#光沢のあるプラスチック)
       - [マットなプラスチック](#マットなプラスチック)
@@ -17,19 +18,24 @@
       - [鈍い光沢の金属](#鈍い光沢の金属)
       - [ガラス](#ガラス)
       - [すりガラス](#すりガラス)
-  - [B3DMatPack便利なの紹介しておくか(どうしようCyclesじゃないとだめかも)](#b3dmatpack便利なの紹介しておくかどうしようcyclesじゃないとだめかも)
-  - [サイコロを作る(UV展開)](#サイコロを作るuv展開)
-  - [JSplacement紹介しときたい..(+α)](#jsplacement紹介しときたいα)
-  - [Lily Surface Scrapper](#lily-surface-scrapper)
-  - [memo](#memo)
+      - [放射](#放射)
+  - [マテリアルスロット](#マテリアルスロット)
+  - [やってみようPart1](#やってみようpart1)
+  - [UV展開](#uv展開)
+  - [やってみようPart2](#やってみようpart2)
+  - [色情報だけでない画像の役割](#色情報だけでない画像の役割)
+  - [やってみようPart3](#やってみようpart3)
+  - [その他参考](#その他参考)
+  - [お疲れ様](#お疲れ様)
 
 ---
 
 
-## マテリアル/テキスチャ
+## マテリアル/テキスチャとは
 共に、形状ではなく見た目をコントロールするためのものですが、
 - マテリアルは物質の質感
 - テキスチャは模様
+
 とざっくり考えて良いです。
 
 なお、シェーディング(陰影処理)を行うシェーダーという概念もありますが、
@@ -43,58 +49,131 @@
 - 透過 及び 屈折率
 など様々な要素が複合的にからみあっています。
 
-- ゴム
-- プラスチック
-- 金属
-- ガラス
+質感の基本的な設定について試してみましょう。
+なお、レンダリングエンジンCyclesの方が圧倒的に表現力が上ですが、処理速度的にはEeveeが優れていて、質もそこそこなので、Eeveeで試します。
 
-など、基本的な設定について試してみましょう。なお、レンダリングエンジンCyclesの方が圧倒的に表現力が上ですが、処理速度的にはEeveeが優れていて、質もそこそこなので、Eeveeで試します。
+---
 
-## スザンヌ色々+左右違うマテリアル
-https://www.youtube.com/watch?v=DsNZzUZPhw4
-https://light11.hatenadiary.com/entry/2019/03/25/214201
-https://hainarashi.hatenablog.com/entry/2020/06/30/130241
+## プリンシプルBSDF
+他のソフトとも互換性を持つシェーダ。項目が多いが主な項目は限られている。
+### 参考にしたページ
+[Principled BSDFでいろんな材質を表現する](https://light11.hatenadiary.com/entry/2019/03/25/214201){:target="_blank"}
 
-### Principled BSDF
-Base Color: 基本となる色
-Metalic: 金属？非金属?
-Specular: 光沢
-Roughness: 表面の粗さ(コート・マット)
-Transmission: 透明度
-Emission: 放射
+[プリンシプルBSDFで樹脂製品の作り方](https://hainarashi.hatenablog.com/entry/2020/06/30/130241){:target="_blank"}
+
+### 主な項目と設定例
+とりあえずこの辺覚えておこう
+| 項目         | 意味                       |
+| ------------ | -------------------------- |
+| Base Color   | 基本となる色               |
+| Metalic      | 金属？非金属?              |
+| Specular     | 光沢                       |
+| Roughness    | 表面の粗さ(コート・マット) |
+| Transmission | 透明度                     |
+| Emission     | 放射                       |
 
 #### ゴム
+| 項目       | 値   |
+| ---------- | ---- |
+| Base Color | 灰色 |
+| Metalic    | 0    |
+| Specular   | 光沢 |
+| Roughness  | 0.5  |
+
 #### 光沢のあるプラスチック
+| 項目       | 値     |
+| ---------- | ------ |
+| Base Color | 適当に |
+| Metalic    | 0      |
+| Roughness  | 0      |
 #### マットなプラスチック
+| 項目       | 値     |
+| ---------- | ------ |
+| Base Color | 適当に |
+| Metalic    | 0      |
+| Roughness  | 0.24   |
 #### 鏡
+| 項目       | 値   |
+| ---------- | ---- |
+| Base Color | 白   |
+| Metalic    | 1    |
+| Specular   | 光沢 |
+| Roughness  | 0    |
 #### 鈍い光沢の金属
+| 項目       | 値   |
+| ---------- | ---- |
+| Base Color | 茶系 |
+| Metalic    | 1    |
+| Roughness  | 0.2  |
 #### ガラス
+| 項目         | 値  |
+| ------------ | --- |
+| Base Color   | 白  |
+| Metalic      | 0   |
+| Roughness    | 0   |
+| Transmission | 0   |
 #### すりガラス
+| 項目         | 値  |
+| ------------ | --- |
+| Base Color   | 白  |
+| Metalic      | 0   |
+| Roughness    | 0.2 |
+| Transmission | 0   |
+#### 放射
+| 項目                                       | 値       |
+| ------------------------------------------ | -------- |
+| Emission                                   | 放射の色 |
+| Emission Strength                          | 適当に   |
+| ※レンダープロパティのBloomにチェックいれる |
 
-## B3DMatPack便利なの紹介しておくか(どうしようCyclesじゃないとだめかも)
-https://www.youtube.com/watch?v=Zni54zJMnJY
+---
+
+## マテリアルスロット
+- 一つのオブジェクトに複数のマテリアルを登録できる
+- どの面をどのマテリアルにするかを設定できる
+
+---
+## やってみようPart1
+- スザンヌをたくさん並べていろいろなマテリアルを当ててみよう
+
+---
+---
+## UV展開
+- 3次元のオブジェクトを、2次元の座標に対応させる方法。
+- これを使うと、3次元オブジェクトに画像を貼ることが可能となる。
+- 展開するときにはシームという切れ目を作り、作業しやすくする
+
+## やってみようPart2
+- 立方体をUV展開した画像をペイントして、サイコロを作ろう
+
+[参考](https://www.youtube.com/watch?v=gV-E0XJUTWg){:target="_blank"}
+
+---
+---
+## 色情報だけでない画像の役割
+- 画像は色だけでなく、凸凹・法線の向きなど様々な用途に使うことが可能
 
 
+## やってみようPart3
+- JSplacementというアプリを使って、Sci-Fi系テクスチャを作成し利用してみよう
+- ちょっと先取りする内容も触れます。
+- Node Wrangler(Ctrl+T) 
 
-## サイコロを作る(UV展開)
-複雑な場合には、シームというのを作り、どこで切り開くかを指示します。
-今回は簡単な立方体に画像を描いてみましょう。
+[参考:Using Displacement to create a Sci-Fi Scene in Blender](https://www.youtube.com/watch?v=ocpOZ6dc0Hs){:target="_blank"}
 
-https://www.youtube.com/watch?v=gV-E0XJUTWg
-作ったら、大量にふりたくなるよね...いや、ならないw
+---
+---
+## その他参考
+- [Lily Surface Scrapper](https://indiegamesjp.dev/?p=1864){:target="_blank"}
+- [B3DMatPack](https://www.youtube.com/watch?v=Zni54zJMnJY){:target="_blank"}
 
+## お疲れ様
+いろいろでてくるけど、魔法がたくさん使えるようになったと思ってくれれば嬉しいです
 
-## JSplacement紹介しときたい..(+α)
-画像を用意するとこんなこともできます。
-Node Wrangler(Ctrl+Shift+T) color, normal
-https://www.youtube.com/watch?v=ocpOZ6dc0Hs
-
-## Lily Surface Scrapper
-https://indiegamesjp.dev/?p=1864
-
+<!--
 ## memo
 きのこ捨てがたいなぁ....サイコロのあとこっちか？
 UV展開必要だし
 
 https://www.youtube.com/watch?v=4d4N8d4ki2Y
-
+-->
