--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -162,7 +162,7 @@
 ## やってみようPart2
 - 立方体をUV展開した画像をペイントして、サイコロを作ろう
 
-[参考](https://www.youtube.com/watch?v=gV-E0XJUTWg){:target="_blank"}
+[参考:テクスチャペイントを使ってサイコロを作ろう](https://www.youtube.com/watch?v=gV-E0XJUTWg){:target="_blank"}
 
 ---
 ---
@@ -174,6 +174,8 @@
 - JSplacementというアプリを使って、Sci-Fi系テクスチャを作成し利用してみよう
 - ちょっと先取りする内容も触れます。
 - Node Wrangler(Ctrl+T) 
+
+[JSplacement](https://windmillart.net/?p=jsplacement){:target="_blank"}
 
 [参考:Using Displacement to create a Sci-Fi Scene in Blender](https://www.youtube.com/watch?v=ocpOZ6dc0Hs){:target="_blank"}
 
