--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -14,7 +14,7 @@
       - [ゴム](#ゴム)
       - [光沢のあるプラスチック](#光沢のあるプラスチック)
       - [マットなプラスチック](#マットなプラスチック)
-      - [鏡](#鏡)
+      - [鏡(Cycles Only)](#鏡cycles-only)
       - [鈍い光沢の金属](#鈍い光沢の金属)
       - [ガラス](#ガラス)
       - [すりガラス](#すりガラス)
@@ -97,7 +97,7 @@
 | Metalic    | 0      |
 | Roughness  | 0.24   |
 
-#### 鏡
+#### 鏡(Cycles Only)
 
 | 項目       | 値  |
 | ---------- | --- |
