--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -156,8 +156,12 @@
 - 3次元のオブジェクトを、2次元の座標に対応させる方法。
 - これを使うと、3次元オブジェクトに画像を貼ることが可能となる。
 - 展開するときにはシームという切れ目を作り、作業しやすくする
+- 今回はUV展開の作業自体は行わない
+
+[参考: UV展開のやり方【考え方・注意点・展開方法】](https://bookyakuno.com/how-to-uv/)
 
 ## やってみようPart2
+- Shift+Aで追加した状態ではUV展開されている。
 - 立方体をUV展開した画像をペイントして、サイコロを作ろう
 
 [参考:テクスチャペイントを使ってサイコロを作ろう](https://www.youtube.com/watch?v=gV-E0XJUTWg){:target="_blank"}
