--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -150,6 +150,10 @@
 ## やってみようPart1
 - スザンヌをたくさん並べていろいろなマテリアルを当ててみよう
 
+![Susanne](img/mr5-05-Part1.png)
+
+[![](https://img.youtube.com/vi/Yp9lO5hw-Fk/0.jpg)](https://www.youtube.com/watch?v=Yp9lO5hw-Fk){:target="_blank"}
+
 ---
 ---
 ## UV展開
@@ -164,6 +168,10 @@
 - Shift+Aで追加した状態ではUV展開されている。
 - 立方体をUV展開した画像をペイントして、サイコロを作ろう
 
+![Dice](img/mr5-05-Part2.png)
+
+[![](https://img.youtube.com/vi/_0jVtLgO92o/0.jpg)](https://www.youtube.com/watch?v=_0jVtLgO92o){:target="_blank"}
+
 [参考:テクスチャペイントを使ってサイコロを作ろう](https://www.youtube.com/watch?v=gV-E0XJUTWg){:target="_blank"}
 
 ---
@@ -174,8 +182,14 @@
 
 ## やってみようPart3
 - JSplacementというアプリを使って、Sci-Fi系テクスチャを作成し利用してみよう
+
+![JSplacement](img/mr5-05-Part3.png)
+
 - ちょっと先取りする内容も触れます。
 - Node Wrangler(Ctrl+T) 
+
+[![](https://img.youtube.com/vi/T7-Zwp9HpV8/0.jpg)](https://www.youtube.com/watch?v=T7-Zwp9HpV8){:target="_blank"}
+
 
 [JSplacement](https://windmillart.net/?p=jsplacement){:target="_blank"}
 
