--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -8,47 +8,104 @@
 - [メディア表現V 6. キーフレームアニメーション・カメラ切り替え](#メディア表現v-6-キーフレームアニメーションカメラ切り替え)
   - [目次](#目次)
   - [キーフレームアニメーション](#キーフレームアニメーション)
-  - [紙飛行機飛ばしてみよう。](#紙飛行機飛ばしてみよう)
-  - [カメラで紙飛行機を追ってみよう](#カメラで紙飛行機を追ってみよう)
-  - [カメラを切り替えてみよう](#カメラを切り替えてみよう)
-  - [アニメーションで利用するエディタ](#アニメーションで利用するエディタ)
-  - [時間軸を扱うエディター](#時間軸を扱うエディター)
-  - [二つのアニメを組み合わせてみよう](#二つのアニメを組み合わせてみよう)
+    - [キーフレーム](#キーフレーム)
+    - [時間軸を扱うエディター](#時間軸を扱うエディター)
+  - [やってみようPart1](#やってみようpart1)
+    - [キーフレームの実験](#キーフレームの実験)
+    - [グラフエディタのHandleTypeの実験](#グラフエディタのhandletypeの実験)
+  - [やってみようPart2](#やってみようpart2)
+    - [紙飛行機の作成](#紙飛行機の作成)
+    - [適当に建物を作ろう](#適当に建物を作ろう)
+    - [紙飛行機飛ばしてみよう。](#紙飛行機飛ばしてみよう)
+      - [キーフレーム作って、移動させてみよう](#キーフレーム作って移動させてみよう)
+      - [Curveに沿って飛ばしてみよう](#curveに沿って飛ばしてみよう)
+    - [カメラで紙飛行機を追ってみよう](#カメラで紙飛行機を追ってみよう)
+    - [カメラを切り替えてみよう](#カメラを切り替えてみよう)
+  - [やってみようPart3](#やってみようpart3)
 
 ---
 
 
 ## キーフレームアニメーション
-- viewportでiを押して、何にキーフレームを打つか(位置・回転・スケール)を選択
+### キーフレーム
+
+- viewportでiを押して、何にキーフレームを打つか(Location:位置・Rotation:回転・Scale:スケール)を選択
 - プロパティの上にマウスを置いて、iを押すことで、全てのパラメータにキーフレームを打つことも可能。
 
-## 紙飛行機飛ばしてみよう。
-- 最初は、普通に(グラフエディター)
-- curve作って、Add Object ConstraintからFollow Path
+### 時間軸を扱うエディター
+- タイムライン → タイムラインは主にキーフレームの表示、アニメーションの再生などに特化しており、編集機能はほぼない
+- ドープシート → キーフレームを直接編集できアニメーション編集に特化している。
+- グラフエディター → 主にアニメーションの動き方を編集するのに特価している
+- NLAエディター → アニメーションをひとかたまりにしたアクションを組み合わせることができる。アクションはトラックで管理されいろいろな動画編集ライクにアニメーションを作成することができる。
 
-## カメラで紙飛行機を追ってみよう
-- Add Object ConstraintからTrack To
+[参考：アニメーションで利用するエディターのクセを知る](https://note.com/info_/n/n3485c541285c){:target="_blank"}
 
-## カメラを切り替えてみよう
+[参考：Blenderの ドープシート を使うべき理由とその使い方](http://xn--u9j207iixgbigp2p.xn--tckwe/archives/7518){:target="_blank"}
+
+
+
+
+## やってみようPart1
+### キーフレームの実験
+- Cubeを1フレーム目でLoc, Rot, Scaleにキーフレーム
+- 30フレームに移動
+- 位置を移動してキーフレーム追加
+- 60フレームに移動
+- 回転を移動してキーフレーム追加
+- 90フレームに移動
+- スケール変えてキーフレーム追加
+- タイムライン・ドープシート・グラフエディアでの見え方を確認してみよう
+
+### グラフエディタのHandleTypeの実験
+- Planeを追加して、移動させよう
+- グラフエディタにして、ハンドルタイプによってどう変わるか試してみよう
+- グラフエディタではパラメータにモディファイアをつけることができるよ
+
+## やってみようPart2
+### 紙飛行機の作成
+- Plane追加(名前をAirPlaneに)
+- EditモードでSubDevide
+- M, Merge A Lastで2点を結合して飛行機の先を作る
+- 中心線をE Zで少し下に伸ばし、先を斜めに
+- 両翼の辺を選択し、少し上に伸ばす
+
+### 適当に建物を作ろう
+ 
+### 紙飛行機飛ばしてみよう。
+#### キーフレーム作って、移動させてみよう
+
+- 通常通り、キーフレームで飛ばしてみよう
+- いろんなエディタで様子をみたら、一度全てのキーフレーム削除
+
+
+#### Curveに沿って飛ばしてみよう
+
+- Shift+Aでcurve - pathを作成して、起動をE等で作成
+- 飛行機にAdd Object ConstraintからFollow Pathを選択
+- Follow Curveにチェック, Forward Axisで正しい方向に向かせる
+- offsetを動かして軌道を確認しよう。
+- 傾きおかしければ、curveの点のtiltでコントロール
+- offsetのキーフレームを追加
+
+### カメラで紙飛行機を追ってみよう
+- カメラにAdd Object ConstraintからTrack To
+
+### カメラを切り替えてみよう
+- カメラを追加して、着地地点がみえるように置く。
+- カメラをアクティブにするには選択してから View - Cameras - Set Active Object As Camera
 - タイムラインでマーカーを追加
 - カメラを選択
 - Bind Camera to Marker
 
-## アニメーションで利用するエディタ
-- タイムライン
-- ドープシート
-- グラフエディタ
-- NLAエディタ
-https://note.com/info_/n/n3485c541285c
-
-## 時間軸を扱うエディター
-- ドープシート → キーフレームを直接編集できアニメーション編集に特化している。
-- グラフエディター → 主にアニメーションの動き方を編集するのに特価している
-- NLAエディター → アニメーションをひとかたまりにしたアクションを組み合わせることができる。アクションはトラックで管理されいろいろな動画編集ライクにアニメーションを作成することができる。
-- タイムライン → タイムラインは主にキーフレームの表示、アニメーションの再生などに特化しており、編集機能はほぼない
-http://xn--u9j207iixgbigp2p.xn--tckwe/archives/7518
 
 
-## 二つのアニメを組み合わせてみよう
+## やってみようPart3
+- 横移動のCubeのキーフレームアニメーションを作成
+- NLAエディタでアクションに
+- 回転するCubeのキーフレームアニメーションを作成
+- NLAエディタでアクションに
+- スケールするCubeのキーフレームアニメーションを作成
+- NLAエディタでアクションに
+- NLAエディタを使って三つのアクションを組み合わせてみよう
 
 
