--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -43,7 +43,8 @@
 [参考：Blenderの ドープシート を使うべき理由とその使い方](http://xn--u9j207iixgbigp2p.xn--tckwe/archives/7518){:target="_blank"}
 
 
-
+---
+---
 
 ## やってみようPart1
 ### キーフレームの実験
@@ -51,17 +52,23 @@
 - 30フレームに移動
 - 位置を移動してキーフレーム追加
 - 60フレームに移動
-- 回転を移動してキーフレーム追加
+- 回転をしてキーフレーム追加
 - 90フレームに移動
 - スケール変えてキーフレーム追加
-- タイムライン・ドープシート・グラフエディアでの見え方を確認してみよう
+- タイムライン・ドープシート・グラフエディタでの見え方を確認してみよう
 
 ### グラフエディタのHandleTypeの実験
 - Planeを追加して、移動させよう
-- グラフエディタにして、ハンドルタイプによってどう変わるか試してみよう
+- グラフエディタにして、Interolation Modeによってどう変わるか試してみよう
 - グラフエディタではパラメータにモディファイアをつけることができるよ
 
+---
+---
+
+
 ## やってみようPart2
+- 紙飛行機を飛ばしてみよう
+- 
 ### 紙飛行機の作成
 - Plane追加(名前をAirPlaneに)
 - EditモードでSubDevide
@@ -97,6 +104,8 @@
 - カメラを選択
 - Bind Camera to Marker
 
+---
+---
 
 
 ## やってみようPart3
