--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -68,10 +68,10 @@
 
 ## やってみようPart2
 - 紙飛行機を飛ばしてみよう
-- 
+
 ### 紙飛行機の作成
 - Plane追加(名前をAirPlaneに)
-- EditモードでSubDevide
+- EditモードでSubDivide
 - M, Merge A Lastで2点を結合して飛行機の先を作る
 - 中心線をE Zで少し下に伸ばし、先を斜めに
 - 両翼の辺を選択し、少し上に伸ばす
