--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -27,6 +27,9 @@
 
 
 ## キーフレームアニメーション
+
+[![](https://img.youtube.com/vi/fwR6d9lbasM/0.jpg)](https://www.youtube.com/watch?v=fwR6d9lbasM){:target="_blank"}
+
 ### キーフレーム
 
 - viewportでiを押して、何にキーフレームを打つか(Location:位置・Rotation:回転・Scale:スケール)を選択
@@ -47,6 +50,9 @@
 ---
 
 ## やってみようPart1
+
+[![](https://img.youtube.com/vi/jFIr7-UaFGU/0.jpg)](https://www.youtube.com/watch?v=jFIr7-UaFGU){:target="_blank"}
+
 ### キーフレームの実験
 - Cubeを1フレーム目でLoc, Rot, Scaleにキーフレーム
 - 30フレームに移動
@@ -56,6 +62,8 @@
 - 90フレームに移動
 - スケール変えてキーフレーム追加
 - タイムライン・ドープシート・グラフエディタでの見え方を確認してみよう
+
+---
 
 ### グラフエディタのHandleTypeの実験
 - Planeを追加して、移動させよう
@@ -69,15 +77,24 @@
 ## やってみようPart2
 - 紙飛行機を飛ばしてみよう
 
+[![](https://img.youtube.com/vi/g4cHgApsy_Y/0.jpg)](https://www.youtube.com/watch?v=g4cHgApsy_Y){:target="_blank"}
+
+[![](https://img.youtube.com/vi/LE21KvWwi7w/0.jpg)](https://www.youtube.com/watch?v=LE21KvWwi7w){:target="_blank"}
+
 ### 紙飛行機の作成
 - Plane追加(名前をAirPlaneに)
 - EditモードでSubDivide
-- M, Merge A Lastで2点を結合して飛行機の先を作る
+- M, Merge At Lastで2点を結合して飛行機の先を作る
 - 中心線をE Zで少し下に伸ばし、先を斜めに
 - 両翼の辺を選択し、少し上に伸ばす
 
+---
+
 ### 適当に建物を作ろう
- 
+
+---
+
+
 ### 紙飛行機飛ばしてみよう。
 #### キーフレーム作って、移動させてみよう
 
@@ -94,8 +111,14 @@
 - 傾きおかしければ、curveの点のtiltでコントロール
 - offsetのキーフレームを追加
 
+---
+
+
 ### カメラで紙飛行機を追ってみよう
 - カメラにAdd Object ConstraintからTrack To
+
+---
+
 
 ### カメラを切り替えてみよう
 - カメラを追加して、着地地点がみえるように置く。
@@ -109,6 +132,9 @@
 
 
 ## やってみようPart3
+
+[![](https://img.youtube.com/vi/t8mEojQFErg/0.jpg)](https://www.youtube.com/watch?v=t8mEojQFErg){:target="_blank"}
+
 - 横移動のCubeのキーフレームアニメーションを作成
 - NLAエディタでアクションに
 - 回転するCubeのキーフレームアニメーションを作成
