--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -12,7 +12,7 @@
     - [時間軸を扱うエディター](#時間軸を扱うエディター)
   - [やってみようPart1](#やってみようpart1)
     - [キーフレームの実験](#キーフレームの実験)
-    - [グラフエディタのHandleTypeの実験](#グラフエディタのhandletypeの実験)
+    - [グラフエディタのInterolation Modeの実験](#グラフエディタのinterolation-modeの実験)
   - [やってみようPart2](#やってみようpart2)
     - [紙飛行機の作成](#紙飛行機の作成)
     - [適当に建物を作ろう](#適当に建物を作ろう)
@@ -65,7 +65,7 @@
 
 ---
 
-### グラフエディタのHandleTypeの実験
+### グラフエディタのInterolation Modeの実験
 - Planeを追加して、移動させよう
 - グラフエディタにして、Interolation Modeによってどう変わるか試してみよう
 - グラフエディタではパラメータにモディファイアをつけることができるよ
