--- a/2022/MediaRepresentationV/mr5_07.md
+++ b/2022/MediaRepresentationV/mr5_07.md
@@ -8,21 +8,76 @@
 - [メディア表現V 7. シェープキーアニメーション](#メディア表現v-7-シェープキーアニメーション)
   - [目次](#目次)
   - [シェープキーアニメーション](#シェープキーアニメーション)
-  - [スザンヌの目と口を動かしてみよう](#スザンヌの目と口を動かしてみよう)
-  - [まぶたを動かしてみよう](#まぶたを動かしてみよう)
-  - [おまけ](#おまけ)
+  - [やってみようPart1](#やってみようpart1)
+    - [スザンヌの準備](#スザンヌの準備)
+    - [ShapeKey利用の準備](#shapekey利用の準備)
+    - [MouseCloseの編集](#mousecloseの編集)
+    - [LookUp,LookRightの編集](#lookuplookrightの編集)
+  - [やってみようPart2](#やってみようpart2)
+    - [まぶたにもShapeKeyを追加してみよう。](#まぶたにもshapekeyを追加してみよう)
+    - [NLA使って、顔を動かしてみよう。](#nla使って顔を動かしてみよう)
+  - [時間がある人](#時間がある人)
+  - [お疲れ様](#お疲れ様)
+  - [(参考)顔の表情ShapeKeyを楽して作成する方法](#参考顔の表情shapekeyを楽して作成する方法)
 
 ---
 
 
 ## シェープキーアニメーション
-頂点の移動量を決めといて、それでアニメーションする方法
+- 基本からの頂点の移動量を決めといて、それを用いてアニメーションする方法
+- A,Bの状態の間はコンピュータが勝手に補間してくれる。
 
-## スザンヌの目と口を動かしてみよう
-https://www.youtube.com/watch?v=e675Ulc7QL4
+---
+---
+## やってみようPart1
+- スザンヌの目と口、動かしてみよう
 
-## まぶたを動かしてみよう
+### スザンヌの準備
+- Scale 10 くらいにしておこう
+- Smooth Shadeにしておこう
+- Subdivision Surfaceをあてておこう(必要に応じて無効に)
+
+### ShapeKey利用の準備
+- +して、Basisを作成しておこう
+- +して、MouseCloseを作成しておこう
+- +して、LookUpを作成しておこう
+- +して、LookRightを作成しておこう
+- LookUp, LookRightはRange Minを-1にしておこう
+ 
+### MouseCloseの編集
+- ShapeKeyでMouseCloseを選択して、エディットモードに
+- 頂点モードで、上唇・下唇を閉じてみよう。
+- オブジェクトモードに戻って、MouseCloseの横の数値を0〜1に変化させてみよう
+
+### LookUp,LookRightの編集
+- ShapeKeyでLookUpを選択して、エディットモードに
+- 頂点モードで両目を選択して、頂点グループを作っておこう。
+- Option+右クリックで、ぐるっと選択できるよ
+- 上にあげてみよう。
+- 同様にShapeKeyでLookRightを選択して、エディットモードに
+- 両目の頂点グループを選択して、右に動かしてみよう。
+
+## やってみようPart2
+### まぶたにもShapeKeyを追加してみよう。
+- 目が飛び出てるので、ちょっと難しいけど...
+
+### NLA使って、顔を動かしてみよう。
+
+---
+---
+
+## 時間がある人
+- 自分でキャラクター作って、動かしてみよう。
+
+## お疲れ様
+- 表情以外にも、いろいろとアニメーションできるようになるね。
 
 
-## おまけ
-https://www.youtube.com/watch?v=61QUzH34l1I
+
+
+<!-- https://www.youtube.com/watch?v=e675Ulc7QL4 --?
+
+
+
+## (参考)顔の表情ShapeKeyを楽して作成する方法
+[FREE-AUTOMATIC Facial MoCap Shapekeys (Blender)](https://www.youtube.com/watch?v=61QUzH34l1I){:target="_blank"}
