--- a/2022/MediaRepresentationV/mr5_07.md
+++ b/2022/MediaRepresentationV/mr5_07.md
@@ -34,7 +34,7 @@
 
 ### スザンヌの準備
 - Scale 10 くらいにしておこう
-- Smooth Shadeにしておこう
+- Shade Smoothにしておこう
 - Subdivision Surfaceをあてておこう(必要に応じて無効に)
 
 ### ShapeKey利用の準備
@@ -56,6 +56,9 @@
 - 上にあげてみよう。
 - 同様にShapeKeyでLookRightを選択して、エディットモードに
 - 両目の頂点グループを選択して、右に動かしてみよう。
+
+---
+---
 
 ## やってみようPart2
 ### まぶたにもShapeKeyを追加してみよう。
