--- a/2022/MediaRepresentationV/mr5_07.md
+++ b/2022/MediaRepresentationV/mr5_07.md
@@ -8,6 +8,7 @@
 - [メディア表現V 7. シェープキーアニメーション](#メディア表現v-7-シェープキーアニメーション)
   - [目次](#目次)
   - [シェープキーアニメーション](#シェープキーアニメーション)
+  - [今日できるようになること](#今日できるようになること)
   - [やってみようPart1](#やってみようpart1)
     - [スザンヌの準備](#スザンヌの準備)
     - [ShapeKey利用の準備](#shapekey利用の準備)
@@ -27,10 +28,18 @@
 - 基本からの頂点の移動量を決めといて、それを用いてアニメーションする方法
 - A,Bの状態の間はコンピュータが勝手に補間してくれる。
 
+[![](https://img.youtube.com/vi/NgLnQC2VQdo/0.jpg)](https://www.youtube.com/watch?v=NgLnQC2VQdo){:target="_blank"}
+
+## 今日できるようになること
+
+[![](https://img.youtube.com/vi/c4S4Nl0cbLI/0.jpg)](https://www.youtube.com/watch?v=c4S4Nl0cbLI){:target="_blank"}
+
 ---
 ---
 ## やってみようPart1
 - スザンヌの目と口、動かしてみよう
+
+[![](https://img.youtube.com/vi/8oiZYf4LFbY/0.jpg)](https://www.youtube.com/watch?v=8oiZYf4LFbY){:target="_blank"}
 
 ### スザンヌの準備
 - Scale 10 くらいにしておこう
@@ -61,6 +70,9 @@
 ---
 
 ## やってみようPart2
+
+[![](https://img.youtube.com/vi/CsTznRqhik0/0.jpg)](https://www.youtube.com/watch?v=CsTznRqhik0){:target="_blank"}
+
 ### まぶたにもShapeKeyを追加してみよう。
 - 目が飛び出てるので、ちょっと難しいけど...
 
